# dwg2xls2

./: create_project_structure.py  run.py
broadcast-tools/: create_project_structure.py  create_structure.py  pyproject.toml
broadcast-tools/reference_old/: main.py
broadcast-tools/reference_old/core/: autocad_manager.py
broadcast-tools/reference_old/gui/: config_dialog.py  drawing_preview.py  main_window - rewrite.py
broadcast-tools/reference_old/utils/: autocad.py  config_manager.py  excel_exporter.py  logger.py  screenshot.py  settings_manager.py
broadcast-tools/reference_old/widgets/: config_panel.py  data_table.py  drawing_defaults_dialog.py  drawing_preview.py  field_mapping_dialog.py  field_requirements_dialog.py  help_dialog.py  interactive_examples_dialog.py
broadcast-tools/src/dwg2xls/core/autocad/: config_import_export.py  config_validation.py  connection_processor.py  custom_facility_manager.py  data_extractors.py  dcom_connector.py  drawing_processor.py  pattern_matchers.py  rack_analyzer.py
broadcast-tools/src/dwg2xls/core/broadcast/: pattern_matcher.py  production_systems.py
reference_old/: __init__.py  autocad_excel_tool.spec.backup
reference_old/core/: __init__.py  connector_factory.py  excel_manager.py  image_processor.py
reference_old/gui/: main_window - Copy.py  main_window.py
reference_old/utils/: drawing_processor.py  error_handler.py
reference_old/widgets/: __init__.py  backup_restore_dialog.py  base_config_dialog.py  export_settings_dialog.py  file_browser.py  layer_settings_dialog.py  preview_panel.py
(+16 files in other folders)
